--- a/env/lage_flow_bypass_cve_2019_3799_pocsuite/spring_cloud_config_cve_2020_5410.cfg
+++ b/env/lage_flow_bypass_cve_2019_3799_pocsuite/spring_cloud_config_cve_2020_5410.cfg
@@ -1,8 +1,8 @@
 [poc_config]
 # 是否使用pocsuite框架编写
-pocsuite = False
+pocsuite = True
 # 攻击测试命令,非pocsuite框架测试时必填
-command = python3 ./env/lage_flow_bypass_cve_2019_3799/cve_2019_3799.py
+command = pocsuite -r Spring_Cloud_Config_Directory_traversal.py -u 127.0.0.1:8888
 # 漏洞环境地址
 vul_add = http://127.0.0.1
 # 漏洞服务开放的默认端口
@@ -14,6 +14,6 @@ docker-compose = True
 # 环境搭建命令
 command = docker run -it ip 8888:8888 -d co0ontty/cve-2019-3799
 # 环境启动所需时间
-waite_time = 0
+waite_time = 120
 # 漏洞服务开放的默认端口
 port = 8888
